@@ -3,6 +3,8 @@ Changelog
 
 1.9.dev0 - (unreleased)
 -----------------------
+* Bug fix: Safely fix varnish settings
+  [avoinea]
 
 1.8 - (2016-12-28)
 ------------------
